fix horizontal overflow by active steps

--- a/src/components/steps/styles/_steps.scss
+++ b/src/components/steps/styles/_steps.scss
@@ -87,6 +87,7 @@ button.step-close-button {
 }
 
 #step-container {
+  overflow: hidden;
   position: absolute;
   z-index: $z-index-step-container;
   pointer-events:none;
